refactor: use Stream.toList() for immutable results in budget domain
PlanService L374 left as Collectors.toList() — result is mutated via projectSnapshots.addAll(costSnapshots).